# hedge-simulator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Main.py  README.md  pyproject.toml
.devcontainer/: devcontainer.json
data/: jinbu.duckdb
pages/: Hedging.py  Portfolio.py  Transactions.py
src/core/: capacity.py  interesting_periods.py  perf_attr.py  perf_attrib.py  periods.py  plotting.py  pos.py  round_trips.py  stats.py  tears.py  timeseries.py  txn.py  utils.py  utils_emp.py
src/data/: read.py
src/performance/: metrics.py  plots.py  portfolio.py
src/simulation/: base_simulator.py  calculations.py  transformations.py
src/utils/: utils.py
